Revert all the changes to JAVA_OPTS and setcap